[gd_scene format=3 uid="uid://camns8fqod8d4"]

[ext_resource type="Script" uid="uid://bvty3qqr51a46" path="res://source/match/Match.gd" id="1_1555u"]
[ext_resource type="Script" uid="uid://dyiscarfh675x" path="res://source/match/IsometricCamera3D.gd" id="1_qb2ry"]
[ext_resource type="Script" uid="uid://fcojax0760pg" path="res://source/match/FogOfWar.gd" id="5_eb52t"]
[ext_resource type="PackedScene" uid="uid://co800e4shs7bh" path="res://source/generic-scenes-and-nodes/3d/RectangularSelection3D.tscn" id="5_yi0pu"]
[ext_resource type="PackedScene" uid="uid://clbjgy724q2si" path="res://source/generic-scenes-and-nodes/2d/DynamicCircle2D.tscn" id="6_ux0ef"]
[ext_resource type="Script" uid="uid://cdr8087xuexpg" path="res://source/match/Terrain.gd" id="7_ccpu4"]
[ext_resource type="Script" uid="uid://bgsj8b6lrs8gr" path="res://source/match/Navigation.gd" id="10_1wfp1"]
[ext_resource type="PackedScene" uid="uid://b6n7cwv706x5n" path="res://source/match/debug/GodModeHud.tscn" id="10_p6gno"]
[ext_resource type="Shader" uid="uid://c4hdqt5bbe6oh" path="res://source/shaders/2d/blurr.gdshader" id="12_pow7t"]
[ext_resource type="PackedScene" uid="uid://cwefaix6rye6k" path="res://source/match/hud/ResourcesBar.tscn" id="12_r13sk"]
[ext_resource type="PackedScene" uid="uid://cwcedr6jj7yty" path="res://source/match/hud/UnitMenus.tscn" id="13_6cypl"]
[ext_resource type="Shader" uid="uid://doavjq8ju7xxp" path="res://source/shaders/3d/simple_fog_of_war.gdshader" id="13_jo8b7"]
[ext_resource type="PackedScene" uid="uid://nnsih72ih7qr" path="res://source/match/hud/ProductionQueue.tscn" id="13_qv3xn"]
[ext_resource type="PackedScene" uid="uid://dk7sa3fkyxks5" path="res://source/generic-scenes-and-nodes/control/RectangularSelection2D.tscn" id="16_ccb0o"]
[ext_resource type="Script" uid="uid://cbiijxuc1qhtx" path="res://source/match/AirNavigation.gd" id="16_ravsv"]
[ext_resource type="Script" uid="uid://cdxensngpqh1y" path="res://source/match/hud/Resources.gd" id="16_vjwpn"]
[ext_resource type="Script" uid="uid://b1hpe60t5y74n" path="res://source/match/hud/Minimap.gd" id="17_0bfte"]
[ext_resource type="Script" uid="uid://ccujxvxsaqaoh" path="res://source/match/TerrainNavigation.gd" id="17_6fprk"]
[ext_resource type="Shader" uid="uid://pxfhc3ku5i4l" path="res://source/shaders/2d/white_transparent.gdshader" id="19_m1b2v"]
[ext_resource type="PackedScene" uid="uid://c0uxy26e4qs4w" path="res://source/match/handlers/MouseClickAnimationsHandler.tscn" id="22_438pb"]
[ext_resource type="PackedScene" uid="uid://1rby73ckmk7b" path="res://source/match/Menu.tscn" id="22_ofmlu"]
[ext_resource type="PackedScene" uid="uid://b83l4dny3gly0" path="res://source/match/debug/FrameIncrementer.tscn" id="23_exhtd"]
[ext_resource type="PackedScene" uid="uid://c3xjdp2yrr1fu" path="res://source/match/debug/DiagnosticHud.tscn" id="23_pocq6"]
[ext_resource type="PackedScene" uid="uid://bocb7hjilvri5" path="res://source/match/handlers/ArealUnitSelectionHandler.tscn" id="24_aug7m"]
[ext_resource type="PackedScene" uid="uid://pi813oou7xim" path="res://source/match/handlers/DoubleClickUnitSelectionHandler.tscn" id="25_ldkhw"]
[ext_resource type="PackedScene" uid="uid://yn470qvc3eak" path="res://source/match/handlers/MatchEndHandler.tscn" id="26_4d7im"]
[ext_resource type="PackedScene" uid="uid://ck6vrgdyg7hja" path="res://source/match/handlers/UnitGroupSelectionHandler.tscn" id="27_j2drv"]
[ext_resource type="PackedScene" uid="uid://b8p6lcwubx1tp" path="res://source/match/handlers/UnitVisibilityHandler.tscn" id="32_fci1c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c3tkw"]
shader = ExtResource("12_pow7t")
shader_parameter/blurr_factor = 1.0
shader_parameter/remove_alpha = false
shader_parameter/overlay = true

[sub_resource type="ViewportTexture" id="ViewportTexture_7yqgo"]
viewport_path = NodePath("FogOfWar/CombinedViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5rcuq"]
resource_local_to_scene = true
render_priority = 2
shader = ExtResource("13_jo8b7")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/world_visibility_texture = SubResource("ViewportTexture_7yqgo")
shader_parameter/texture_units_per_world_unit = 2
shader_parameter/outer_margin_for_fade_out = 2.0
shader_parameter/debug_texture_view = false

[sub_resource type="QuadMesh" id="QuadMesh_xttrh"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="NavigationMesh" id="NavigationMesh_8emvl"]
geometry_parsed_geometry_type = 1
geometry_collision_mask = 4278190088
geometry_source_geometry_mode = 1
geometry_source_group_name = &"air_navigation_input"
cell_size = 0.4
cell_height = 0.4
agent_height = 2.0
agent_radius = 0.8
agent_max_climb = 0.0

[sub_resource type="NavigationMesh" id="NavigationMesh_exfwj"]
geometry_collision_mask = 4278190082
geometry_source_geometry_mode = 2
geometry_source_group_name = &"terrain_navigation_input"
cell_size = 0.3
cell_height = 0.3
agent_height = 1.8
agent_radius = 0.9
agent_max_climb = 0.0
edge_max_error = 1.0

[sub_resource type="ViewportTexture" id="ViewportTexture_vu2gm"]
viewport_path = NodePath("FogOfWar/CombinedViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3nec5"]
resource_local_to_scene = true
shader = ExtResource("19_m1b2v")
shader_parameter/reference_texture = SubResource("ViewportTexture_vu2gm")

[sub_resource type="ViewportTexture" id="ViewportTexture_8q44e"]
viewport_path = NodePath("HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport")

[node name="Match" type="Node3D" unique_id=2081765841]
script = ExtResource("1_1555u")

[node name="Players" type="Node3D" parent="." unique_id=367293454]

[node name="IsometricCamera3D" type="Camera3D" parent="." unique_id=624940476]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 49.5996, 12.4465, 65.9216)
projection = 1
current = true
size = 15.0
script = ExtResource("1_qb2ry")
size_max = 60
bounding_planes = Array[Plane]([Plane(1, 0, 0, 0), Plane(-1, 0, 0, -50), Plane(0, 0, 1, 0), Plane(0, 0, -1, -50)])

[node name="RectangularSelection3D" parent="." unique_id=1823991713 instance=ExtResource("5_yi0pu")]

[node name="Terrain" type="StaticBody3D" parent="." unique_id=1940924122]
collision_mask = 0
script = ExtResource("7_ccpu4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Terrain" unique_id=647494412]

[node name="FogOfWar" type="Node3D" parent="." unique_id=722058329]
script = ExtResource("5_eb52t")

[node name="CombinedViewport" type="SubViewport" parent="FogOfWar" unique_id=1506192250]
disable_3d = true
handle_input_locally = false
size = Vector2i(100, 100)
render_target_update_mode = 4

[node name="Background" type="ColorRect" parent="FogOfWar/CombinedViewport" unique_id=353404817]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FogViewportContainer" type="SubViewportContainer" parent="FogOfWar/CombinedViewport" unique_id=1995703360]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FogViewport" type="SubViewport" parent="FogOfWar/CombinedViewport/FogViewportContainer" unique_id=242460690]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(100, 100)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="EditorOnlyCircle" parent="FogOfWar/CombinedViewport" unique_id=769770937 instance=ExtResource("6_ux0ef")]
position = Vector2(25, 25)
radius = 20

[node name="Revealer" type="ColorRect" parent="FogOfWar/CombinedViewport" unique_id=217847880]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurrOverlay" type="ColorRect" parent="FogOfWar/CombinedViewport" unique_id=1693578180]
material = SubResource("ShaderMaterial_c3tkw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenOverlay" type="MeshInstance3D" parent="FogOfWar" unique_id=2055991679]
material_override = SubResource("ShaderMaterial_5rcuq")
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_xttrh")

[node name="Navigation" type="Node3D" parent="." unique_id=700392416]
script = ExtResource("10_1wfp1")

[node name="Air" type="Node3D" parent="Navigation" unique_id=681753967]
script = ExtResource("16_ravsv")

[node name="ReferenceStaticCollider" type="StaticBody3D" parent="Navigation/Air" unique_id=1019072093 groups=["air_navigation_input"]]
visible = false
collision_layer = 8
collision_mask = 0
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Navigation/Air/ReferenceStaticCollider" unique_id=101610020]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Navigation/Air" unique_id=771053813]
navigation_mesh = SubResource("NavigationMesh_8emvl")

[node name="Terrain" type="Node3D" parent="Navigation" unique_id=1693583193]
script = ExtResource("17_6fprk")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Navigation/Terrain" unique_id=117753050]
navigation_mesh = SubResource("NavigationMesh_exfwj")

[node name="Units" type="Node3D" parent="." unique_id=1106736529]

[node name="Player0" type="Node3D" parent="Units" unique_id=2008122537]

[node name="Player1" type="Node3D" parent="Units" unique_id=412754444]

[node name="Player2" type="Node3D" parent="Units" unique_id=1855257288]

[node name="Player3" type="Node3D" parent="Units" unique_id=1966988085]

[node name="Player4" type="Node3D" parent="Units" unique_id=1605542627]

[node name="Player5" type="Node3D" parent="Units" unique_id=855357303]

[node name="Player6" type="Node3D" parent="Units" unique_id=570597802]

[node name="Player7" type="Node3D" parent="Units" unique_id=1958146835]

[node name="Player8" type="Node3D" parent="Units" unique_id=1390425381]

[node name="Player9" type="Node3D" parent="Units" unique_id=361134947]

[node name="UI" type="CanvasLayer" parent="." unique_id=474859804]

[node name="RectangularSelection2D" parent="UI" unique_id=1446899849 instance=ExtResource("16_ccb0o")]

[node name="HUD" type="CanvasLayer" parent="." unique_id=692461479]

[node name="MarginContainer" type="MarginContainer" parent="HUD" unique_id=1855559512]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -215.0
offset_right = 215.0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 5

[node name="Minimap" type="PanelContainer" parent="HUD/MarginContainer" unique_id=345912243]
layout_mode = 2
script = ExtResource("17_0bfte")

[node name="MarginContainer" type="MarginContainer" parent="HUD/MarginContainer/Minimap" unique_id=600926205]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MinimapViewport" type="SubViewport" parent="HUD/MarginContainer/Minimap/MarginContainer" unique_id=1339750257]
disable_3d = true
size = Vector2i(100, 100)

[node name="Background" type="ColorRect" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport" unique_id=1932084698]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.351562, 0.351562, 0.351562, 1)

[node name="EditorOnlyDummyUnit" type="ColorRect" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport" unique_id=2113758731]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="EditorOnlyDummyUnit2" type="ColorRect" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport" unique_id=2126059176]
anchors_preset = -1
anchor_left = 0.25
anchor_right = 0.25
offset_left = -1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
color = Color(1, 0, 0, 1)

[node name="FogOfWarMask" type="ColorRect" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport" unique_id=109213414]
material = SubResource("ShaderMaterial_3nec5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CameraIndicator" type="Line2D" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport" unique_id=1100799162]
points = PackedVector2Array(5, 5, 5, 30, 30, 30, 30, 5, 5, 5)
width = 1.0
begin_cap_mode = 1
end_cap_mode = 1
antialiased = true

[node name="MinimapTextureRect" type="TextureRect" parent="HUD/MarginContainer/Minimap/MarginContainer" unique_id=50014525]
layout_mode = 2
texture = SubResource("ViewportTexture_8q44e")
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="HUD" unique_id=531979622]
offset_right = 40.0
offset_bottom = 11.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="Resources" type="VBoxContainer" parent="HUD/MarginContainer2" unique_id=444458537]
layout_mode = 2
script = ExtResource("16_vjwpn")

[node name="ResourcesBar" parent="HUD/MarginContainer2/Resources" unique_id=694123678 instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar2" parent="HUD/MarginContainer2/Resources" unique_id=1656568976 instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar3" parent="HUD/MarginContainer2/Resources" unique_id=1942896685 instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar4" parent="HUD/MarginContainer2/Resources" unique_id=2114536728 instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar5" parent="HUD/MarginContainer2/Resources" unique_id=734794856 instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar6" parent="HUD/MarginContainer2/Resources" unique_id=1176070922 instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar7" parent="HUD/MarginContainer2/Resources" unique_id=1207457146 instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar8" parent="HUD/MarginContainer2/Resources" unique_id=203239257 instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="HUD" unique_id=1095839039]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer3" unique_id=1154608522]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ProductionQueue" parent="HUD/MarginContainer3/VBoxContainer" unique_id=1528192687 instance=ExtResource("13_qv3xn")]
layout_mode = 2

[node name="UnitMenus" parent="HUD/MarginContainer3/VBoxContainer" unique_id=32705158 instance=ExtResource("13_6cypl")]
layout_mode = 2
size_flags_horizontal = 8

[node name="Menu" parent="." unique_id=2015371880 instance=ExtResource("22_ofmlu")]
visible = false

[node name="Debug" type="Node3D" parent="." unique_id=538142194]

[node name="DiagnosticHUD" parent="Debug" unique_id=1241067029 instance=ExtResource("23_pocq6")]

[node name="GodModeHUD" parent="Debug" unique_id=1173173880 instance=ExtResource("10_p6gno")]

[node name="FrameIncrementer" parent="Debug" unique_id=2122386917 instance=ExtResource("23_exhtd")]

[node name="Handlers" type="Node3D" parent="." unique_id=763481066]

[node name="ArealUnitSelectionHandler" parent="Handlers" unique_id=430587740 instance=ExtResource("24_aug7m")]
rectangular_selection_3d = NodePath("../../RectangularSelection3D")

[node name="DoubleClickUnitSelectionHandler" parent="Handlers" unique_id=456653333 instance=ExtResource("25_ldkhw")]

[node name="MouseClickAnimationsHandler" parent="Handlers" unique_id=417431667 instance=ExtResource("22_438pb")]

[node name="UnitGroupSelectionHandler" parent="Handlers" unique_id=1354564142 instance=ExtResource("27_j2drv")]

[node name="MatchEndHandler" parent="Handlers" unique_id=1312500087 instance=ExtResource("26_4d7im")]
visible = false

[node name="UnitVisibilityHandler" parent="Handlers" unique_id=435844044 instance=ExtResource("32_fci1c")]
